tests/errors/const_string_type.vt
const X: int = "hi"; fn main(){}
